# secure-oj-backend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mn.sh  roadmap.md
include/: futil.c  futil.h  judge.c  judge.h  monitor.c  monitor.h  nums.h  usglim.c  usglim.h  whitelist.h
include/tests/: oj_driver.c  utils_driver.c
include/tests/units/: accepted.h  invalid_ops.h  prelude.h  presentation_error.h  runtime_error.h  space_exceeded.h  time_exceeded.h  tools.c  tools.h  wrong_answer.h
include/utils/: cstr.c  cstr.h  error.c  error.h  nums.h  prelude.h  timing.c  timing.h  unitest.c  unitest.h
io/case/1/: in_1  in_2  in_4  out_1  out_2  out_4
io/case/2/: in_1  in_2  in_3  out_1  out_2  out_3
io/case/3/: in_1  in_2  in_3
io/case/4/: in_1  in_2  in_3  in_4  out_1  out_2  out_3  out_4
io/submission/1/: main.cpp
io/submission/2/: main.cpp
io/submission/3/: main.cpp
io/submission/4/: main.cpp
io/submission/5/: main.cpp
io/submission/6/: main.cpp
io/submission/7/: main.cpp
